--- a/docs/catalogs/v9-250206-s390x.md
+++ b/docs/catalogs/v9-250206-s390x.md
@@ -6,45 +6,16 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v9 (250206)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250206-s390x</tr></tr>
-  <tr><td>Digest</td><td>sha256:b9ef2ef8d16bd9bb1015d8f2597c5f4f7daadbbefab700268c914f1b07582d25</tr></tr>
-</table>
+:::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v9.0 & v9.1
-    - IBM Maximo Manage v9.0 & v9.1
-    - IBM SLS v3.0
 
+:::mas-catalog-whats-new
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250206-s390x.yaml`
+:::mas-catalog-known-issues
+:::mas-catalog-install
 
-
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250206-s390x)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:b9ef2ef8d16bd9bb1015d8f2597c5f4f7daadbbefab700268c914f1b07582d25
-  priority: 90
-```
-
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -52,37 +23,7 @@ For more information about the OCP lifecycle refer to the [Red Hat OpenShift Con
 
 IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Container Platform subscription as part of their purchase. This includes 18 months of maintenance support for each OpenShift minor release.  A further 6 months support is available to purchase as an Extended Update Support (EUS) Add-on to x86-64 versions of Red Hat OpenShift Kubernetes Engine, Red Hat OpenShift Container Platform, and Red Hat OpenShift Platform Plus Standard subscriptions.
 
-<table class="compatabilityMatrix">
-  <tr>
-    <th>OCP</th><td rowspan="4" class="spacer"></td>
-    <th>General Availability</th>
-    <th>Standard Support</th>
-    <th>Extended Support</th>
-    <th>Supported MAS Releases</th>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.16</td>
-    <td>June 27, 2024</td>
-    <td>December 27, 2025</td>
-    <td>June 27, 2027</td>
-    <td>8.10 - 9.0</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.15</td>
-    <td>February 27, 2024</td>
-    <td>August 27, 2025</td>
-    <td>N/A</td>
-    <td>8.10 - 9.0</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.14</td>
-    <td>October 31, 2023</td>
-    <td>May 1, 2025</td>
-    <td>October 31, 2026</td>
-    <td>8.10 - 9.0</td>
-  </tr>
-</table>
-
+:::mas-catalog-ocp-compatibility-matrix
 
 ### Certified Operators
 The following packages from the `registry.redhat.io/redhat/certified-operator-index` catalog are used in the Maximo Application Suite install:
@@ -90,14 +31,12 @@ The following packages from the `registry.redhat.io/redhat/certified-operator-in
 - **gpu-operator-certified** required by `ibm.mas_devops.nvidia_gpu` role
 - **kubeturbo-certified** required by `ibm.mas_devops.kubeturbo` role
 
-
 ### Community Operators
 The following packages from the `registry.redhat.io/redhat/community-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **grafana-operator** required by `ibm.mas_devops.grafana` role
 - **opentelemetry-operator** required by `ibm.mas_devops.opentelemetry` role
 - **strimzi-kafka-operator** required by `ibm.mas_devops.kafka` role (if using Strimzi as Kakfa provider)
-
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
