--- a/docs/catalogs/v9-250501-amd64.md
+++ b/docs/catalogs/v9-250501-amd64.md
@@ -1,55 +1,15 @@
 IBM Maximo Operator Catalog v9 (250501)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250501-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:152bb3a71e029d2215a14816ac928bc28054d85d6123a3813c9679fd7eb91650</tr></tr>
-</table>
+:::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v8.10, v8.11, v9.0 and v9.1
-    - IBM Maximo IoT v8.7, v8.8 and v9.0
-    - IBM Maximo Manage v8.7, v8.6, v9.0 and v9.1
-    - IBM Maximo Monitor v8.11, v8.10 and v9.0
-    - IBM Maximo Optimizer v8.5, v8.4, v9.0 and v9.1
-    - IBM Maximo Predict v9.0, v8.9, v8.8
-    - IBM Maximo Visual Inspection v8.9, v9.0 and v9.1
-    - IBM Data Dictionary v1.1
+:::mas-catalog-whats-new
 
+:::mas-catalog-known-issues
+:::mas-catalog-install
 
-Known Issues
--------------------------------------------------------------------------------
-- Customers using Maximo Assist v8.7 or v8.8 should not update and must instead contact IBM Support for guidance regarding the removal of IBM Watson Discovery and upgrading to Maximo Assist v9.0
-- For Airgap users, please review the [technote regarding a known Multi-Arch limitation](https://www.ibm.com/support/pages/node/7232093) before attempting installation.
-
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250501-amd64.yaml`
-
-
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250501-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:152bb3a71e029d2215a14816ac928bc28054d85d6123a3813c9679fd7eb91650
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -57,37 +17,7 @@ For more information about the OCP lifecycle refer to the [Red Hat OpenShift Con
 
 IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Container Platform subscription as part of their purchase. This includes 18 months of maintenance support for each OpenShift minor release.  A further 6 months support is available to purchase as an Extended Update Support (EUS) Add-on to x86-64 versions of Red Hat OpenShift Kubernetes Engine, Red Hat OpenShift Container Platform, and Red Hat OpenShift Platform Plus Standard subscriptions.
 
-<table class="compatabilityMatrix">
-  <tr>
-    <th>OCP</th><td rowspan="4" class="spacer"></td>
-    <th>General Availability</th>
-    <th>Standard Support</th>
-    <th>Extended Support</th>
-    <th>Supported MAS Releases</th>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.16</td>
-    <td>June 27, 2024</td>
-    <td>December 27, 2025</td>
-    <td>June 27, 2027</td>
-    <td>8.10 - 9.0</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.15</td>
-    <td>February 27, 2024</td>
-    <td>August 27, 2025</td>
-    <td>N/A</td>
-    <td>8.10 - 9.0</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.14</td>
-    <td>October 31, 2023</td>
-    <td>May 1, 2025</td>
-    <td>October 31, 2026</td>
-    <td>8.10 - 9.0</td>
-  </tr>
-</table>
-
+:::mas-catalog-ocp-compatibility-matrix
 
 ### Certified Operators
 The following packages from the `registry.redhat.io/redhat/certified-operator-index` catalog are used in the Maximo Application Suite install:
@@ -95,14 +25,12 @@ The following packages from the `registry.redhat.io/redhat/certified-operator-in
 - **gpu-operator-certified** required by `ibm.mas_devops.nvidia_gpu` role
 - **kubeturbo-certified** required by `ibm.mas_devops.kubeturbo` role
 
-
 ### Community Operators
 The following packages from the `registry.redhat.io/redhat/community-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **grafana-operator** required by `ibm.mas_devops.grafana` role
 - **opentelemetry-operator** required by `ibm.mas_devops.opentelemetry` role
 - **strimzi-kafka-operator** required by `ibm.mas_devops.kafka` role (if using Strimzi as Kakfa provider)
-
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
@@ -114,13 +42,11 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 - **local-storage-operator**  required by `ibm.mas_devops.ocs` role
 - **odf-operator**  required by `ibm.mas_devops.ocs` role
 
-
 IBM Cloud Pak for Data Compatibility
 -------------------------------------------------------------------------------
 This catalog is certified compatible with **IBM Cloud Pak for Data v5.0.0**.
 
 For more information on Cloud Pak for Data's support policy review this [IBM Cloud Pak for Data Software Support Lifecycle Addendum](https://www.ibm.com/support/pages/node/6593147).
-
 
 MongoDB Compatibility
 -------------------------------------------------------------------------------
@@ -132,7 +58,6 @@ By default an in-cluster MongoDb (CE) instance will be created when you install 
 - [MongoDB Atlas](https://www.mongodb.com/products/platform/atlas-database)
 
 [Amazon DocumentDB](https://aws.amazon.com/documentdb/) provides [MongoDb compatability](https://docs.aws.amazon.com/documentdb/latest/developerguide/compatibility.html) and may be used as an alternative to MongoDb.  This catalog is certified compatible with **DocumentDb Engine Version v5.0.0**.
-
 
 ### IBM Maximo Application Suite
 | Package                  | Default Channel   | Channel       | Latest Version                                                                      |
