--- a/docs/catalogs/v9-250624-s390x.md
+++ b/docs/catalogs/v9-250624-s390x.md
@@ -1,50 +1,16 @@
 IBM Maximo Operator Catalog v9 (250624)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250624-s390x</tr></tr>
-  <tr><td>Digest</td><td>sha256:5748e21db7f688c8d80c5ab14e394e5575997cfc2e544d77b2173159dc237aba</tr></tr>
-</table>
+:::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
-- **New feature release**
-    - IBM Maximo Application Suite Core Platform v9.1
-    - IBM Maximo Manage v9.1
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v9.0
-    - IBM Maximo Manage v9.0
-    - IBM Suite License Service v3
-    - IBM Truststore Manager v1.7
 
-- **Openshift 4.18 support** Openshift Container Platform 4.18 support has been added. Refer OCP 4.18 release notes [here](https://docs.redhat.com/en/documentation/openshift_container_platform/4.18/html/release_notes/index)
+:::mas-catalog-whats-new
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250624-s390x.yaml`
+:::mas-catalog-known-issues
+:::mas-catalog-install
 
-
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250624-s390x)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:5748e21db7f688c8d80c5ab14e394e5575997cfc2e544d77b2173159dc237aba
-  priority: 90
-```
-
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -52,45 +18,7 @@ For more information about the OCP lifecycle refer to the [Red Hat OpenShift Con
 
 IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Container Platform subscription as part of their purchase. This includes 18 months of maintenance support for each OpenShift minor release.  A further 6 months support is available to purchase as an Extended Update Support (EUS) Add-on to x86-64 versions of Red Hat OpenShift Kubernetes Engine, Red Hat OpenShift Container Platform, and Red Hat OpenShift Platform Plus Standard subscriptions.
 
-<table class="compatabilityMatrix">
-  <tr>
-    <th>OCP</th><td rowspan="6" class="spacer"></td>
-    <th>General Availability</th>
-    <th>Standard Support</th>
-    <th>Extended Support</th>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.18</td>
-    <td>February 25, 2025</td>
-    <td>GA of 4.19 + 3 Months</td>
-    <td>August 25, 2026</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.17</td>
-    <td>October 1, 2024</td>
-    <td>May 25, 2025</td>
-    <td>April 1, 2026</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.16</td>
-    <td>June 27, 2024</td>
-    <td>December 27, 2025</td>
-    <td>June 27, 2027</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.15</td>
-    <td>February 27, 2024</td>
-    <td>August 27, 2025</td>
-    <td>N/A</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.14</td>
-    <td>October 31, 2023</td>
-    <td>May 1, 2025</td>
-    <td>October 31, 2026</td>
-  </tr>
-</table>
-
+:::mas-catalog-ocp-compatibility-matrix
 
 ### Certified Operators
 The following packages from the `registry.redhat.io/redhat/certified-operator-index` catalog are used in the Maximo Application Suite install:
@@ -98,14 +26,12 @@ The following packages from the `registry.redhat.io/redhat/certified-operator-in
 - **gpu-operator-certified** required by `ibm.mas_devops.nvidia_gpu` role
 - **kubeturbo-certified** required by `ibm.mas_devops.kubeturbo` role
 
-
 ### Community Operators
 The following packages from the `registry.redhat.io/redhat/community-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **grafana-operator** required by `ibm.mas_devops.grafana` role
 - **opentelemetry-operator** required by `ibm.mas_devops.opentelemetry` role
 - **strimzi-kafka-operator** required by `ibm.mas_devops.kafka` role (if using Strimzi as Kakfa provider)
-
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
@@ -116,7 +42,6 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 - **aws-efs-csi-driver-operator**  required by `ibm.mas_devops.ocp_efs` role
 - **local-storage-operator**  required by `ibm.mas_devops.ocs` role
 - **odf-operator**  required by `ibm.mas_devops.ocs` role
-
 
 ### IBM Maximo Application Suite
 | Package        | Default Channel   | Channel       | Latest Version                              |
