--- a/docs/catalogs/v9-251010-ppc64le.md
+++ b/docs/catalogs/v9-251010-ppc64le.md
@@ -1,39 +1,18 @@
 IBM Maximo Operator Catalog v9 (251010)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-251010-ppc64le</tr></tr>
-  <tr><td>Digest</td><td>sha256:5ae3c0f01d691235c5d42d09d035f5a3d80bcedeb08e28423a8e80c75644547a</tr></tr>
-</table>
+:::mas-catalog-details
 
 
+
+:::mas-catalog-known-issues
 - **Security updates and bug fixes**
     - IBM Maximo Manage v9.1
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-251010-ppc64le.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-251010-ppc64le)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:5ae3c0f01d691235c5d42d09d035f5a3d80bcedeb08e28423a8e80c75644547a
-  priority: 90
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
@@ -42,44 +21,7 @@ For more information about the OCP lifecycle refer to the [Red Hat OpenShift Con
 
 IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Container Platform subscription as part of their purchase. This includes 18 months of maintenance support for each OpenShift minor release.  A further 6 months support is available to purchase as an Extended Update Support (EUS) Add-on to x86-64 versions of Red Hat OpenShift Kubernetes Engine, Red Hat OpenShift Container Platform, and Red Hat OpenShift Platform Plus Standard subscriptions.
 
-<table class="compatabilityMatrix">
-  <tr>
-    <th>OCP</th><td rowspan="6" class="spacer"></td>
-    <th>General Availability</th>
-    <th>Standard Support</th>
-    <th>Extended Support</th>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.18</td>
-    <td>February 25, 2025</td>
-    <td>GA of 4.19 + 3 Months</td>
-    <td>August 25, 2026</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.17</td>
-    <td>October 1, 2024</td>
-    <td>May 25, 2025</td>
-    <td>April 1, 2026</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.16</td>
-    <td>June 27, 2024</td>
-    <td>December 27, 2025</td>
-    <td>June 27, 2027</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.15</td>
-    <td>February 27, 2024</td>
-    <td>August 27, 2025</td>
-    <td>N/A</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.14</td>
-    <td>October 31, 2023</td>
-    <td>May 1, 2025</td>
-    <td>October 31, 2026</td>
-  </tr>
-</table>
+:::mas-catalog-ocp-compatibility-matrix
 
 
 ### Red Hat Operators
