--- a/docs/catalogs/v9-251030-s390x.md
+++ b/docs/catalogs/v9-251030-s390x.md
@@ -1,44 +1,16 @@
 IBM Maximo Operator Catalog v9 (251030)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-251030-s390x</tr></tr>
-  <tr><td>Digest</td><td>sha256:799ac815a86985f5b3ab191d3939590cdc46e59c7f6aea0293fe4ea39bd754b2</tr></tr>
-</table>
+:::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
 
-- OCP **4.19** Support
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v9.0 and v9.1
-    - IBM Maximo Manage v9.0 and v9.1
+:::mas-catalog-whats-new
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-251030-s390x.yaml`
+:::mas-catalog-known-issues
+:::mas-catalog-install
 
-
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-251030-s390x)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:799ac815a86985f5b3ab191d3939590cdc46e59c7f6aea0293fe4ea39bd754b2
-```
-
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -46,57 +18,12 @@ For more information about the OCP lifecycle refer to the [Red Hat OpenShift Con
 
 IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Container Platform subscription as part of their purchase. This includes 18 months of maintenance support for each OpenShift minor release.  A further 6 months support is available to purchase as an Extended Update Support (EUS) Add-on to x86-64 versions of Red Hat OpenShift Kubernetes Engine, Red Hat OpenShift Container Platform, and Red Hat OpenShift Platform Plus Standard subscriptions.
 
-<table class="compatabilityMatrix">
-  <tr>
-    <th>OCP</th><td rowspan="6" class="spacer"></td>
-    <th>General Availability</th>
-    <th>Standard Support</th>
-    <th>Extended Support</th>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.19</td>
-    <td>June 17, 2025</td>
-    <td>December 17, 2026</td>
-    <td> N/A </td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.18</td>
-    <td>February 25, 2025</td>
-    <td>GA of 4.19 + 3 Months</td>
-    <td>August 25, 2026</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.17</td>
-    <td>October 1, 2024</td>
-    <td>May 25, 2025</td>
-    <td>April 1, 2026</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.16</td>
-    <td>June 27, 2024</td>
-    <td>December 27, 2025</td>
-    <td>June 27, 2027</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.15</td>
-    <td>February 27, 2024</td>
-    <td>August 27, 2025</td>
-    <td>N/A</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.14</td>
-    <td>October 31, 2023</td>
-    <td>May 1, 2025</td>
-    <td>October 31, 2026</td>
-  </tr>
-</table>
-
+:::mas-catalog-ocp-compatibility-matrix
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **openshift-pipelines-operator-rh** required by the MAS CLI
-
 
 ### IBM Maximo Application Suite
 | Package        | Default Channel   | Channel       | Latest Version                                                              |
