--- a/docs/catalogs/v8-230217-amd64.md
+++ b/docs/catalogs/v8-230217-amd64.md
@@ -6,7 +6,14 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (230217)
 ===============================================================================
 
-:::mas-catalog-details
+Details
+-------------------------------------------------------------------------------
+
+<table>
+  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
+  <tr><td>Tag</td><td>v8-230217-amd64</tr></tr>
+  <tr><td>Digest</td><td>sha256:c23bd01da3025008d2ed550b6a2ef912179c34922c924eb9448cbb663a46b6b9</tr></tr>
+</table>
 
 Other IBM content curated from `icr.io/cpopen/ibm-operator-catalog@sha256:8521ac8527cf723041066e88997a264094d5f8eae20e9ffe30353444768cb3c0`
 
@@ -17,10 +24,27 @@ Other IBM content curated from `icr.io/cpopen/ibm-operator-catalog@sha256:8521ac
     This release of the catalog is no longer supported due to the shutdown of IBM User Data Services, the first operator catalog release that supports it's replacement (IBM Data Reporter Operator) is the [February 2024 update](v8-240227-amd64.md)
 
 
-:::mas-catalog-install
+Manual Installation
+-------------------------------------------------------------------------------
+`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-230217-amd64.yaml`
 
 
-:::mas-catalog-source
+Source
+-------------------------------------------------------------------------------
+```yaml
+apiVersion: operators.coreos.com/v1alpha1
+kind: CatalogSource
+metadata:
+  name: ibm-operator-catalog
+  namespace: openshift-marketplace
+spec:
+  displayName: IBM Maximo Operators (v8-230217-amd64)
+  publisher: IBM
+  description: Static Catalog Source for IBM Maximo Application Suite
+  sourceType: grpc
+  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:c23bd01da3025008d2ed550b6a2ef912179c34922c924eb9448cbb663a46b6b9
+  priority: 90
+```
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
