--- a/docs/catalogs/v9-260129-amd64.md
+++ b/docs/catalogs/v9-260129-amd64.md
@@ -63,6 +63,10 @@ By default an in-cluster MongoDb (CE) instance will be created when you install 
 
 [Amazon DocumentDB](https://aws.amazon.com/documentdb/) provides [MongoDb compatability](https://docs.aws.amazon.com/documentdb/latest/developerguide/compatibility.html) and may be used as an alternative to MongoDb.  This catalog is certified compatible with **DocumentDb Engine Version v5.0.0**.
 
+Software Product Compatibility Reports
+-------------------------------------------------------------------------------
+[Understand the complete set of compatibility requirements for an IBM Product](https://www.ibm.com/software/reports/compatibility/clarity/index.html).
+
 Package Manifest
 -------------------------------------------------------------------------------
 
